--- a/index.htm
+++ b/index.htm
@@ -193,7 +193,7 @@ position: fixed;
 right: 2rem;
 bottom: 2rem;
 z-index: 1000;
-border: 1px solid red£»
+border: 1px solid redï¼›
 }
 a>.btnbacktop{
 font-size: 2rem;
@@ -234,15 +234,15 @@ box-sizing: border-box;
 </style>
 </head>
 
-<!*************************¸öÈËĞÅÏ¢************************>
+<!*************************ä¸ªäººä¿¡æ¯************************>
 
 <body>
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="images/photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
+<p><img alt="" src="photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
 <p><b>
-Zhaoquan Yuan (Ô¬ÕÙÈ«)
+Zhaoquan Yuan
 </b>
 </p>
 </h1>
@@ -272,7 +272,7 @@ Email:&nbsp; zqyuan0@gmail.com
 </div>
 </div>
 
-<!*************************Ä¿Â¼************************>
+<!*************************ç›®å½•************************>
 
 <div class="right">
 <div class="wrap">
@@ -301,7 +301,7 @@ I am an Assistant Professor at the <a href="http://sist.swjtu.edu.cn/index.do?ac
 I graduated with my bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received my Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/CN/model/index.shtml"  target="_blank">National Laboratory of Pattern Recognition</a>, 
 
-<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu (IEEE Fellow, IAPR Fellow, ¹ú¼Ò½ÜÇà)</a>. I was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
+<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu (IEEE Fellow, IAPR Fellow)</a>. I was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
 
 Also, I was a postdoc researcher in UESTC collaborating with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
@@ -369,7 +369,8 @@ My research interests include multimedia semantic comprehension, causal inferenc
 <p id="RESEARCH">
 <font size="4"><b>RECENT RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
 <br></p>
-
+
+
 
 
 <!*******************---------------table-------------*************>
@@ -483,14 +484,14 @@ Understanding potential motivations behind people's actions in images is a key r
 
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
 "Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
-IEEE Transactions on Multimedia (TMM, JCR-1Çø), 2015, 17(6): 816 - 827.
+IEEE Transactions on Multimedia (TMM, JCR-1åŒº), 2015, 17(6): 816 - 827.
 </li>
 
 
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
 "A unified latent feature learning framework in social media." 
-IEEE Transactions on Multimedia (TMM, JCR-1Çø), 2014, 16(6): 1624-1635.
+IEEE Transactions on Multimedia (TMM, JCR-1åŒº), 2014, 16(6): 1624-1635.
 </li>
 
 
@@ -529,9 +530,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 <!--
-<li>ÃæÏòÁìÓò´óÊı¾İµÄÊÂ¼şÖªÊ¶Í¼Æ×¹¹½¨ÑĞ¾¿£¬¹ú¼Ò×ÔÈ»¿ÆÑ§»ù½ğ (ÖØµãÏîÄ¿)£¬²ÎÑĞ</li>
-<li>ÃæÏò¾üÊÂÇé±¨µÄ¶àÃ½Ìå´óÊı¾İ·ÖÎöÓëÕ¹Ê¾£¬¹ú¼Ò×ÔÈ»¿ÆÑ§»ù½ğ (ÁªºÏ»ù½ğÏîÄ¿)£¬Ö÷ÑĞ</li>
-<li>»ùÓÚÉî¶ÈÑ§Ï°¿ò¼ÜµÄÉç½»Ã½ÌåĞÅÏ¢ÍÚ¾ò£¬¹ú¼Ò×ÔÈ»¿ÆÑ§»ù½ğ (ÃæÉÏÏîÄ¿)£¬Ö÷ÑĞ</li>
+<li>é¢å‘é¢†åŸŸå¤§æ•°æ®çš„äº‹ä»¶çŸ¥è¯†å›¾è°±æ„å»ºç ”ç©¶ï¼Œå›½å®¶è‡ªç„¶ç§‘å­¦åŸºé‡‘ (é‡ç‚¹é¡¹ç›®)ï¼Œå‚ç ”</li>
+<li>é¢å‘å†›äº‹æƒ…æŠ¥çš„å¤šåª’ä½“å¤§æ•°æ®åˆ†æä¸å±•ç¤ºï¼Œå›½å®¶è‡ªç„¶ç§‘å­¦åŸºé‡‘ (è”åˆåŸºé‡‘é¡¹ç›®)ï¼Œä¸»ç ”</li>
+<li>åŸºäºæ·±åº¦å­¦ä¹ æ¡†æ¶çš„ç¤¾äº¤åª’ä½“ä¿¡æ¯æŒ–æ˜ï¼Œå›½å®¶è‡ªç„¶ç§‘å­¦åŸºé‡‘ (é¢ä¸Šé¡¹ç›®)ï¼Œä¸»ç ”</li>
 </ul>
 -->
 
@@ -754,7 +755,7 @@ CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index
 
 <ul>
 
-<li><a href="http://www.zhuanzhi.ai/topic/2001826911580295" target="_blank">×¨ÖªÖªÊ¶·ÖÏíÆ½Ì¨.</a>
+<li><a href="http://www.zhuanzhi.ai/topic/2001826911580295" target="_blank">ä¸“çŸ¥çŸ¥è¯†åˆ†äº«å¹³å°.</a>
 </li>
 
 <li><a href="https://github.com/bharathgs/Awesome-pytorch-list"  target="_blank"> Awesome-Pytorch-list.</a>
