--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,7 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
+<p><img alt="" src="\\photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
 <p><b>
 Zhaoquan Yuan
 </b>
@@ -308,7 +308,7 @@ Also, I was a postdoc researcher in UESTC collaborating with <a href="http://www
 <br>
 <br>
 
-My research interests include multimedia semantic comprehension, causal inference, and machine learning.
+My research interests include multimodal dialogue system, machine learning, and multimedia semantic comprehension.
 
 <br>
 <br>
