--- a/index.htm
+++ b/index.htm
@@ -242,7 +242,7 @@ box-sizing: border-box;
 <h1>
 <p><img alt="" src="\\photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
 <p><b>
-Zhaoquan Yuan
+Zhaoquan Yuan (袁召全)
 </b>
 </p>
 </h1>
