--- a/index.htm
+++ b/index.htm
@@ -297,12 +297,9 @@ Email:&nbsp; zqyuan0@gmail.com
 
 
 I am an Assistant Professor at the <a href="http://sist.swjtu.edu.cn/index.do?action=index"  target="_blank">School of Information Science and Technology</a>, <a href="https://www.swjtu.edu.cn/"  target="_blank">Southwest Jiaotong University (SWJTU)</a>. 
-
 I graduated with my bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received my Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/CN/model/index.shtml"  target="_blank">National Laboratory of Pattern Recognition</a>, 
-
-<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu (IEEE Fellow, IAPR Fellow)</a>. I was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
-
+<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu (IEEE Fellow, IAPR Fellow, 国家杰青)</a>. I was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
 Also, I was a postdoc researcher in UESTC collaborating with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
@@ -387,7 +384,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 </th>
 </tr>
 <tr>
-<td width="300" align="center"><img src="images/movieqa_light.png" width="280">
+<td width="300" align="center"><img src="../movieqa_light.png" width="280">
 </td>
 <td>
 
