--- a/index.htm
+++ b/index.htm
@@ -384,7 +384,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 </th>
 </tr>
 <tr>
-<td width="300" align="center"><img src="../movieqa_light.png" width="280">
+<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/movieqa_light.png" width="280">
 </td>
 <td>
 
