--- a/index.htm
+++ b/index.htm
@@ -323,7 +323,8 @@ My research interests include multimodal dialogue system, machine learning, and 
 
 <ul>
 
-<li>I am elected as a member of the Academic Committee (AC) of the CCF Young Computer Scientists & Engineers Forum (CCF YOCSEF), Jan 5, 2019.
+<li> 
+Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering."” is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
@@ -379,7 +380,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 <th colspan="2" align="left">
 <font color="black"><b>Movie Story Question Answering</b>
 &nbsp;
-[<a href="http://userweb.swjtu.edu.cn/Userweb/zqyuan/index.htm">Tutorial</a>]
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
 </font>
 </th>
 </tr>
@@ -397,7 +398,7 @@ Visual question answering by using information from multiple modalities has attr
 
 <b>Datasets and codes: </b>
 [<a href="http://movieqa.cs.toronto.edu/home/" target="_blank">MovieQA</a>]&nbsp;
-[<a href="http://userweb.swjtu.edu.cn/Userweb/zqyuan/index.htm">Code</a>]
+[<a href="https://zqyuan.github.io/homepage/">Code</a>]
 </td>
 </tr>
 
@@ -408,7 +409,7 @@ Visual question answering by using information from multiple modalities has attr
 <th colspan="2" align="left">
 <font color="black"><b>Motivation Prediction</b>
 &nbsp;
-[<a href="http://userweb.swjtu.edu.cn/Userweb/zqyuan/index.htm">Tutorial</a>]
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
 </font>
 </th>
 </tr>
@@ -423,8 +424,8 @@ Understanding potential motivations behind people's actions in images is a key r
 
 
 <b>Datasets and codes: </b>
-[<a href="http://userweb.swjtu.edu.cn/Userweb/zqyuan/index.htm">Dataset</a>]&nbsp;
-[<a href="http://userweb.swjtu.edu.cn/Userweb/zqyuan/index.htm">Code</a>]
+[<a href="https://zqyuan.github.io/homepage/">Dataset</a>]&nbsp;
+[<a href="https://zqyuan.github.io/homepage/">Code</a>]
 
 </td>
 </tr>
@@ -451,14 +452,13 @@ Understanding potential motivations behind people's actions in images is a key r
 
 <p>
 <font size="3">
-<b>Multimodal QA / Machine Learning</b></font>
+<b>Multimodal Machine Learning</b></font>
 </p>
 
 <ul>
 
-<li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li, Xiao Wu,  and Changsheng Xu. 
-"Adversarial Multimodal Network for Movie Question Answering."
-<a href="https://arxiv.org/abs/1906.09844"  target="_blank">arXiv:1906.09844</a>.
+<li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
+"Adversarial Multimodal Network for Movie Question Answering.", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
 </li>
 
 </ul>
@@ -467,7 +467,7 @@ Understanding potential motivations behind people's actions in images is a key r
 
 <p>
 <font size="3">
-<b> Multimedia / Computer vision</b></font>
+<b> Computer vision / Social Media</b></font>
 </p>
 
 <ul>
