--- a/index.htm
+++ b/index.htm
@@ -324,7 +324,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 <ul>
 
 <li> 
-Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering."” is accepted by IEEE Transactions on Multimedia.
+Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering." is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
