--- a/index.htm
+++ b/index.htm
@@ -467,7 +467,7 @@ Understanding potential motivations behind people's actions in images is a key r
 
 <p>
 <font size="3">
-<b> Computer vision / Social Media</b></font>
+<b> Computer Vision / Social Media</b></font>
 </p>
 
 <ul>
@@ -519,7 +519,12 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <font size="4"><b>GRANT AND FUNDS</b> </font> &nbsp; <a href="#top">Go Top</a>
 </p>
 
+
+
 <ul>
+
+<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program.</li>
+
 <li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, National Natural Science Foundation of China (NSFC).</li>
 
 <li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, Fundamental Research Funds for the Central Universities.</li>
@@ -552,6 +557,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <ul>
 
+<li>ACM International Conference on Multimedia 2020.</li>
 <li>International Conference on Multimedia Modeling 2020.</li>
 <li>ACM International Conference on Multimedia in Asia 2019.</li>
 <li>ACM International Conference on Multimedia 2019.</li>
@@ -569,9 +575,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <ul>
 
-<li>Multimedia Tools and Applications.</li>
-<li>IEEE Transactions on Multimedia.</li>
 
+<li>IEEE Transactions on Multimedia.</li>
+<li>Multimedia Tools and Applications.</li>
 
 
 <br>
@@ -618,15 +624,14 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <p>
 <font size="3">
-<b>Machine Learning</b></font>
+<b>Machine learning / NLP</b></font>
 </p>
 
 
 
 <ul>
 
-<li>Generative Adversarial Network: <a href="https://github.com/eriklindernoren/PyTorch-GAN"  target="_blank">PyTorch-GAN</a>, 
-<a href="https://github.com/GANs-in-Action/gans-in-action"  target="_blank">GANs in Action</a>.
+<li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>.
 </li>
 
 <!--
