--- a/index.htm
+++ b/index.htm
@@ -795,7 +795,7 @@ CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index
 <div class="rightBox">
 
 
-Last updated date: January 16, 2019
+Last updated date: June 01, 2020.
 <br>
 <br>
 
