--- a/index.htm
+++ b/index.htm
@@ -324,7 +324,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 <ul>
 
 <li> 
-Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering." is accepted by IEEE Transactions on Multimedia.
+<font size="2" color="red">Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering." is accepted by IEEE Transactions on Multimedia</font>. June 01, 2020.
 </li>
 
 
@@ -634,6 +634,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>.
 </li>
 
+<li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>.
+</li>
+
 <!--
 <li>Graph Neural Networks Papers: <a href="https://github.com/nnzhan/Awesome-Graph-Neural-Networks"  target="_blank"> 1</a>, <a href="https://github.com/thunlp/GNNPapers"  target="_blank"> 2</a> ; 
 PyTorch Geometric: <a href="https://github.com/rusty1s/pytorch_geometric"  target="_blank">GitHub</a>.
@@ -763,8 +766,7 @@ CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index
 <li><a href="https://github.com/bharathgs/Awesome-pytorch-list"  target="_blank"> Awesome-Pytorch-list.</a>
 </li>
 
-<li>XAI: <a href="https://github.com/h2oai/mli-resources"  target="_blank"> Machine Learning Interpretability</a>, <a href="https://github.com/jphall663/awesome-machine-learning-interpretability#comprehensive-software-examples-and-tutorials"  target="_blank">awesome-machine-learning-interpretability.
-</li>
+
 
 
 
@@ -778,7 +780,8 @@ CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index
 <li><a href="https://github.com/brendenlake/AAI-site"  target="_blank"> Advancing AI Through Cognitive Science.</a>
 </li>
 
-
+<li>XAI: <a href="https://github.com/h2oai/mli-resources"  target="_blank"> Machine Learning Interpretability</a>, <a href="https://github.com/jphall663/awesome-machine-learning-interpretability#comprehensive-software-examples-and-tutorials"  target="_blank">awesome-machine-learning-interpretability.
+</li>
 
 -->
 
@@ -800,6 +803,7 @@ Last updated date: June 01, 2020.
 <br>
 
 <!*********************************Visit tracker**********************************>
+
 
 
 
