--- a/index.htm
+++ b/index.htm
@@ -324,7 +324,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 <ul>
 
 <li> 
-<font size="2" color="red">Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering." is accepted by IEEE Transactions on Multimedia</font>. June 01, 2020.
+<font size="2" color="red"> <strong><I>[June 01, 2020] </I> </strong> </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering." is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
