--- a/index.htm
+++ b/index.htm
@@ -375,6 +375,41 @@ My research interests include multimodal dialogue system, machine learning, and 
 <table cellpadding="0" cellspacing="0" width="95%">
 <tbody>
 
+
+
+
+<!*****-------------------------Multimodal Dialogue------------------------****>
+<tr bgcolor="#CCE5FF">
+<th colspan="2" align="left">
+<font color="black"><b>Multimodal Dialogue System</b>
+&nbsp;
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+</font>
+</th>
+</tr>
+<tr>
+<td width="300" align="center"><img src="visdial.png" width="280">
+</td>
+<td>
+
+Human-computer dialogue is one of the important research directions of natural language understanding. However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, the multimodal dialogue system with both "visual and listening" plays a more and more important role in the fields of retail, customer service, media, education, tourism, etc.
+
+
+The multimodal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
+
+
+<br>
+<br>
+
+
+<b>Datasets and codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Dataset</a>]&nbsp;
+[<a href="https://zqyuan.github.io/homepage/">Code</a>]
+
+</td>
+</tr>
+
+
 <!*******************---------the first work---------*************>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
@@ -389,7 +424,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 </td>
 <td>
 
-Visual question answering by using information from multiple modalities has attracted more and more attention in re- cent years. However, it is a very challenging task, as the visual content and natural language have quite different statistical properties. In this work, we present a method called Adversarial Multimodal Network (AMN) to better understand video stories for question answering. In AMN, we propose to learn multimodal feature representations by finding a more coherent subspace for video clips and the corresponding texts (e.g., subtitles and questions) based on generative adversarial networks. Moreover, a self-attention mechanism is developed to enforce our newly introduced consistency constraint in order to preserve the self-correlation between the visual cues of the original video clips in the learned multimodal representations. Extensive experiments on the benchmark MovieQA and TVQA datasets show the effectiveness of our proposed AMN over other published state-of-the-art methods.
+Visual question answering by using information from multiple modalities has attracted more and more attention in recent years. However, it is a very challenging task, as the visual content and natural language have quite different statistical properties. In this work, we present a method called Adversarial Multimodal Network (AMN) to better understand video stories for question answering. In AMN, we propose to learn multimodal feature representations by finding a more coherent subspace for video clips and the corresponding texts (e.g., subtitles and questions) based on generative adversarial networks. Moreover, a self-attention mechanism is developed to enforce our newly introduced consistency constraint in order to preserve the self-correlation between the visual cues of the original video clips in the learned multimodal representations. Extensive experiments on the benchmark MovieQA and TVQA datasets show the effectiveness of our proposed AMN over other published state-of-the-art methods.
 
 <br>
 <br>
@@ -402,35 +437,11 @@ Visual question answering by using information from multiple modalities has attr
 </td>
 </tr>
 
-<!--
-
-<!*****-------------------------Motivation Prediction------------------------****>
-<tr bgcolor="#CCE5FF">
-<th colspan="2" align="left">
-<font color="black"><b>Motivation Prediction</b>
-&nbsp;
-[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
-</font>
-</th>
-</tr>
-<tr>
-<td width="300" align="center"><img src="images/motivation.jpg" width="280">
-</td>
-<td>
-
-Understanding potential motivations behind people's actions in images is a key research topic in the computer vision and pattern recognition. It is a very challenging, because motivations are usually beyond plain image pixels and hard to be described visually. To solve this task, we employ high-level image-specific textual information and explore a potential causal structure among the concepts of scenes, actions and motivations. Unlike most existing visual recognition models, PLCR infers the motivations by executing perception learning and causal reasoning seamlessly. 
-<br>
-<br>
 
 
-<b>Datasets and codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Dataset</a>]&nbsp;
-[<a href="https://zqyuan.github.io/homepage/">Code</a>]
 
-</td>
-</tr>
 
--->
+<!*****-----------------****>
 
 </tbody>
 </table>
