--- a/index.htm
+++ b/index.htm
@@ -388,7 +388,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 </th>
 </tr>
 <tr>
-<td width="300" align="center"><img src="visdial.png" width="280">
+<td width="300" align="center"><img src="https://zqyuan.github.io/homepage/visdial.png" width="280">
 </td>
 <td>
 
