--- a/index.htm
+++ b/index.htm
@@ -281,6 +281,7 @@ Email:&nbsp; zqyuan0@gmail.com
 <li><a href="./#RESEARCH">RESEARCH</a></li> &nbsp; &nbsp; 
 <li><a href="./#PUBLICATIONS">PUBLICATION</a></li> &nbsp; &nbsp; 
 <li><a href="./#RESOURCE">RESOURCE</a></li>
+<li><a href="./#recruit">招生信息</a></li>
 
 
 </ul>
@@ -648,27 +649,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>.
 </li>
 
-<!--
-<li>Graph Neural Networks Papers: <a href="https://github.com/nnzhan/Awesome-Graph-Neural-Networks"  target="_blank"> 1</a>, <a href="https://github.com/thunlp/GNNPapers"  target="_blank"> 2</a> ; 
-PyTorch Geometric: <a href="https://github.com/rusty1s/pytorch_geometric"  target="_blank">GitHub</a>.
-</li>
--->
-
-<!--
-<li>PyTorch Geometric: <a href="https://github.com/rusty1s/pytorch_geometric"  target="_blank">GitHub</a>.
-</li>
--->
-
-<!--
-<li>Awesome Reinforcement Learning: <a href="https://github.com/jgvictores/awesome-deep-reinforcement-learning" target="_blank">1</a>, <a href="https://github.com/tigerneil/awesome-deep-rl" target="_blank">2</a>, <a href="https://github.com/aikorea/awesome-rl" target="_blank">3</a>, <a href="https://www.youtube.com/playlist?list=PLkFD6_40KJIxJMR-j5A1mkxK26gh_qg37" target="_blank">4</a>.
-</li>
--->
 
 <li>Deep Reinforcement Learning: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL-with-PyTorch</a>.
-<!--
-<a href="https://www.youtube.com/playlist?list=PLkFD6_40KJIxJMR-j5A1mkxK26gh_qg37"  target="_blank">CS294-112</a>
-</li>
--->
+
 
 
 
@@ -705,61 +688,6 @@ PyTorch Geometric: <a href="https://github.com/rusty1s/pytorch_geometric"  targe
 
 
 
-<!*****---------------- *Vision and Natural Language Processing---------------- ****>
-<!--
-<p>
-<font size="3">
-<b>Natural Language Processing  /  Vision </b></font>
-</p>
-
-<ul>
-
-<li>Natural Language Processing: <a href="https://www.bilibili.com/video/av29608234"  target="_blank"> Michael Collins (Columbia U)</a>, 
-<a href="https://www.bilibili.com/video/av20050023"  target="_blank"> Dan Jurafsky (Stanford)</a>.
-</li>
-
-
-<li> Deep Learning for NLP:  CS11-747 (Graham Neubig, <a href="http://phontron.com/class/nn4nlp2019/"  target="_blank"> Homepage</a>, <a href="https://www.youtube.com/playlist?list=PL8PYTP1V4I8Ajj7sY6sdtmjgkt7eo2VMs"  target="_blank">Video</a>), 
-CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index.html"  target="_blank"> Homepage</a>, <a href="https://www.youtube.com/playlist?list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z"  target="_blank"> Video </a>).
-</li>
-
-
-<li>CNN for Visual Recognition: <a href="http://cs231n.stanford.edu/"  target="_blank">Fei-Fei Li (Stanford)</a>.
-</li>
-
-
-</ul>
--->
-
-
-
-
-
-
-
-<!*****---------------- Causality---------------- *****>
-<!--
-<p>
-<font size="3">
-<b>Causality</b></font>
-</p>
-
-<ul>
-<li><a href="https://github.com/logangraham/arXausality" target="_blank">arXausality.</a>
-</li>
-
-<li><a href="https://github.com/Microsoft/dowhy" target="_blank">dowhy.</a>
-</li>
-
-
-<li><a href="https://github.com/akelleh/causality" target="_blank">Tools for causal analysis.</a>
-</li>
-
-
-</ul>
--->
-
-
 
 
 <!*****---------------- Others---------------- ***>
@@ -779,28 +707,34 @@ CS224n (Christopher Manning, <a href="http://web.stanford.edu/class/cs224n/index
 
 
 
-
-
-<!--
-<li><a href="https://github.com/zqyuan/xai_resources"  target="_blank"> Interesting Resources Related to XAI (Explainable Artificial Intelligence).</a>
-</li>
-
-<li><a href="https://github.com/ddbourgin/numpy-ml"  target="_blank"> Numpy-ml.</a>
-</li>
-
-<li><a href="https://github.com/brendenlake/AAI-site"  target="_blank"> Advancing AI Through Cognitive Science.</a>
-</li>
-
-<li>XAI: <a href="https://github.com/h2oai/mli-resources"  target="_blank"> Machine Learning Interpretability</a>, <a href="https://github.com/jphall663/awesome-machine-learning-interpretability#comprehensive-software-examples-and-tutorials"  target="_blank">awesome-machine-learning-interpretability.
-</li>
-
--->
-
 </ul>
 <br>
 </div>
 
 
+
+
+<!*************************招生信息************************>
+
+<div class="rightBox">
+<p id="recruit">
+<font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
+</p>
+
+
+袁召全博士本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括多模态对话、机器学习与推理等。目前主持国家自然科学基金青年项目1项，四川省科技计划项目1项，中央高校基本科研业务费项目1项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入一起合作。
+
+<br>
+<br>
+
+有意向的同学请邮件咨询: zqyuan0@gmail.com。
+
+<br>
+<br>
+
+</div>
+
+<!*************************************************>
 
 
 
