--- a/index.htm
+++ b/index.htm
@@ -259,7 +259,7 @@ School of Information Science and Technology, Southwest Jiaotong University (SWJ
 <div class="box">
 <h3>contact</h3>
 <p>Office:
-Room X9441, No.9 building, School of Information Science and Technology, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
+Room X9445, No.9 building, School of Information Science and Technology, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
 China PR.</p>
 
 Email:&nbsp; zqyuan0@gmail.com
@@ -363,7 +363,7 @@ My research interests include multimodal dialogue system, machine learning, and 
 
 
 
-<!**********************************RECENT RESEARCH*********************************************>
+<!**********************************RESEARCH*********************************************>
 <div class="rightBox">
 <p id="RESEARCH">
 <font size="4"><b>RECENT RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
