--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,7 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="https://zqyuan.github.io/homepage/photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
+<p><img alt="" src="https://zqyuan.github.io/homepage/profile_photo.jpg" style="WIDTH: 200px; HEIGHT: 191px" /></p>
 <p><b>
 Zhaoquan Yuan (袁召全)
 </b>
