--- a/index.htm
+++ b/index.htm
@@ -641,29 +641,18 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 <ul>
-
-<li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>.
+<li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>
 </li>
 
-<li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>.
+<li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>
 </li>
 
-
-<li>Deep Reinforcement Learning: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL-with-PyTorch</a>.
-
-
-
-
-<li> <a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Awesome-Meta-Learning</a>.
-</li>
-
-
+<li><a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL Algorithms with PyTorch</a>
 </ul>
 
 
 
 <!--
-
 <!*****---------------- *Question Answering---------------- ****>
 <p>
 <font size="3">
@@ -671,18 +660,11 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </p>
 
 <ul>
-
-<li> <a href="https://github.com/seriousran/awesome-qa"  target="_blank">Awesome Question Answering</a>.
+<li> <a href="https://github.com/seriousran/awesome-qa"  target="_blank">Awesome Question Answering</a>
 </li>
-
-
-<li> <a href="https://github.com/sebastianruder/NLP-progress"  target="_blank">NLP-progress (QA)</a>.
+<li> <a href="https://github.com/sebastianruder/NLP-progress"  target="_blank">NLP-progress (QA)</a>
 </li>
-
-
-
 </ul>
-
 -->
 
 
@@ -698,10 +680,10 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <ul>
 
-<li><a href="http://www.zhuanzhi.ai/topic/2001826911580295" target="_blank">专知知识分享平台.</a>
+<li><a href="http://www.zhuanzhi.ai/topic/2001826911580295" target="_blank">专知知识分享平台</a>
 </li>
 
-<li><a href="https://github.com/bharathgs/Awesome-pytorch-list"  target="_blank"> Awesome-Pytorch-list.</a>
+<li><a href="https://github.com/bharathgs/Awesome-pytorch-list"  target="_blank"> Awesome-Pytorch-list</a>
 </li>
 
 
