--- a/index.htm
+++ b/index.htm
@@ -343,6 +343,9 @@ His research interests include multimodal dialogue system, machine learning, and
 
 <ul>
 
+<li>Digital Image Processing, B0445, 2020--2021(1), Text Book: <a href="https://www.amazon.com/Digital-Image-Processing-Rafael-Gonzalez/dp/0133356728/ref=sr_1_1?keywords=digital+image+processing&qid=1548059657&sr=8-1" target="_blank">Digital Image Processing (4th Edition), Rafael C. Gonzalez</a>.
+</li>
+
 <li>Digital Image Processing, B0445, 2019--2020(2), Text Book: <a href="https://www.amazon.com/Digital-Image-Processing-Rafael-Gonzalez/dp/0133356728/ref=sr_1_1?keywords=digital+image+processing&qid=1548059657&sr=8-1" target="_blank">Digital Image Processing (4th Edition), Rafael C. Gonzalez</a>.
 </li>
 
@@ -374,7 +377,6 @@ His research interests include multimodal dialogue system, machine learning, and
 <!*******************---------------table-------------*************>
 <table cellpadding="0" cellspacing="0" width="95%">
 <tbody>
-
 
 
 
@@ -410,7 +412,7 @@ The multimodal (text + image) interaction makes the information distribution mor
 </tr>
 
 
-<!*******************---------the first work---------*************>
+<!*******************---------Movie Story Question Answering---------*************>
 <tr bgcolor="#CCE5FF">
 <th colspan="2" align="left">
 <font color="black"><b>Movie Story Question Answering</b>
@@ -438,19 +440,18 @@ Visual question answering by using information from multiple modalities has attr
 </tr>
 
 
-
-
-
 <!*****-----------------****>
 
 </tbody>
 </table>
 
-
 <br>
 <br>
 
 </div>
+
+
+
 
 
 <!**********************SELECTED PUBLICATIONS**************************>
@@ -483,31 +484,20 @@ Visual question answering by using information from multiple modalities has attr
 
 <ul>
 
-<!--
-<li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li, Xiao Wu,  and Changsheng Xu. 
-"Adversarial Multimodal Network for Movie Question Answering."
-<a href="https://arxiv.org/abs/1906.09844"  target="_blank">arXiv:1906.09844</a>.
-</li>
--->
-
 <li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
 "Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
 </li>
-
-
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
 "A unified latent feature learning framework in social media." 
 IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 </li>
 
-
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup>.
 "Latent feature learning in social media network".
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
-
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, and Changsheng Xu<sup>*</sup>. 
 "Tag-aware image classification via nested deep belief nets." 
@@ -517,7 +507,6 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </ul>
 
 <br>
-
 </div>
 
 
@@ -530,25 +519,13 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <font size="4"><b>GRANT AND FUNDS</b> </font> &nbsp; <a href="#top">Go Top</a>
 </p>
 
-
-
 <ul>
-
 <li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program.</li>
 
 <li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, National Natural Science Foundation of China (NSFC).</li>
 
 <li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, Fundamental Research Funds for the Central Universities.</li>
 </ul>
-
-
-<!--
-<li>面向领域大数据的事件知识图谱构建研究，国家自然科学基金 (重点项目)，参研</li>
-<li>面向军事情报的多媒体大数据分析与展示，国家自然科学基金 (联合基金项目)，主研</li>
-<li>基于深度学习框架的社交媒体信息挖掘，国家自然科学基金 (面上项目)，主研</li>
-</ul>
--->
-
 <br>
 </div>
 
@@ -590,7 +567,6 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li>IEEE Transactions on Multimedia.</li>
 <li>Multimedia Tools and Applications.</li>
 
-
 <br>
 </div>
 
@@ -615,30 +591,25 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li>Siyuan Sun (UESTC)
 </li>
 
-
-
 </ul>
 
 <br>
 </div>
-
 -->
 
-<!*********************** RESOURCE**************************>
 
+
+
+<!*********************** RESOURCE**************************>
 <div class="rightBox">
 <p id="RESOURCE">
 <font size="4"><b>RESOURCE</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-
-
 <p>
 <font size="3">
 <b>Machine learning / NLP</b></font>
 </p>
-
-
 
 <ul>
 <li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>
@@ -652,24 +623,6 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 
-<!--
-<!*****---------------- *Question Answering---------------- ****>
-<p>
-<font size="3">
-<b>Question Answering</b></font>
-</p>
-
-<ul>
-<li> <a href="https://github.com/seriousran/awesome-qa"  target="_blank">Awesome Question Answering</a>
-</li>
-<li> <a href="https://github.com/sebastianruder/NLP-progress"  target="_blank">NLP-progress (QA)</a>
-</li>
-</ul>
--->
-
-
-
-
 
 <!*****---------------- Others---------------- ***>
 
@@ -679,14 +632,11 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </p>
 
 <ul>
-
 <li><a href="http://www.zhuanzhi.ai/topic/2001826911580295" target="_blank">专知知识分享平台</a>
 </li>
 
 <li><a href="https://github.com/bharathgs/Awesome-pytorch-list"  target="_blank"> Awesome-Pytorch-list</a>
 </li>
-
-
 
 </ul>
 <br>
@@ -696,25 +646,20 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 <!*************************招生信息************************>
-
 <div class="rightBox">
 <p id="recruit">
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-
 袁召全博士本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括多模态对话、机器学习与推理等。目前主持国家自然科学基金青年项目1项，四川省科技计划项目1项，中央高校基本科研业务费项目1项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入一起合作。
 
 <br>
 <br>
-
 有意向的同学请邮件咨询: zqyuan0@gmail.com。
-
 <br>
 <br>
 
 </div>
-
 <!*************************************************>
 
 
@@ -722,7 +667,6 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <!*****************************updated date***********************************>
 <div class="rightBox">
-
 
 Last updated date: June 01, 2020.
 <br>
