--- a/index.htm
+++ b/index.htm
@@ -300,7 +300,7 @@ Zhaoquan Yuan is an Assistant Professor at the <a href="http://sist.swjtu.edu.cn
 He graduated with his bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received my Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/cn/index.html"  target="_blank">National Laboratory of Pattern Recognition</a>, 
 <a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (IEEE Fellow, IAPR Fellow, 国家杰青). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
-Also, He engaged in postdoctoral research in UESTC collaborating with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
+Also, He was engaged in postdoctoral research in UESTC collaborating with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
 <br>
@@ -394,10 +394,11 @@ His research interests include multimodal dialogue system, machine learning, and
 </td>
 <td>
 
-Human-computer dialogue is one of the important research directions of natural language understanding. However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, the multimodal dialogue system with both "visual and listening" plays a more and more important role in the fields of retail, customer service, media, education, tourism, etc.
+Human-computer dialogue is one of the important research directions of natural language understanding. However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
 
+In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, the multimodal dialogue system with both "visual and listening" plays a more and more important role in the fields of retail, customer service, media, education, tourism, etc. The multimodal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. 
 
-The multimodal (text + image) interaction makes the information distribution more efficient and the interaction mode more natural. We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
+We are engaged in developing advanced algorithms for multimodal human-computer interaction system to understand the user's intentions in a detailed way and give accurate and fast responses.
 
 
 <br>
