--- a/index.htm
+++ b/index.htm
@@ -465,13 +465,21 @@ Visual question answering by using information from multiple modalities has attr
 
 <p>
 <font size="3">
-<b>Multimodal Machine Learning</b></font>
+<b>Journal Articles</b></font>
 </p>
 
 <ul>
 
 <li><strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu,  and Changsheng Xu. 
 "Adversarial Multimodal Network for Movie Question Answering.", IEEE Transactions on Multimedia (TMM, JCR-1区), accepted.
+</li>
+<li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
+"Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
+IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
+</li>
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
+"A unified latent feature learning framework in social media." 
+IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 </li>
 
 </ul>
@@ -480,20 +488,10 @@ Visual question answering by using information from multiple modalities has attr
 
 <p>
 <font size="3">
-<b> Computer Vision / Social Media</b></font>
+<b> Conference Proceedings</b></font>
 </p>
 
 <ul>
-
-<li><strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, and Jitao Sang. 
-"Learning Feature Hierarchies: A Layer-wise Tag-embedded Approach." 
-IEEE Transactions on Multimedia (TMM, JCR-1区), 2015, 17(6): 816 - 827.
-</li>
-
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu. 
-"A unified latent feature learning framework in social media." 
-IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
-</li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup>.
 "Latent feature learning in social media network".
