--- a/index.htm
+++ b/index.htm
@@ -465,7 +465,7 @@ Visual question answering by using information from multiple modalities has attr
 
 <p>
 <font size="3">
-<b>Journal Articles</b></font>
+<b>Journal Papers</b></font>
 </p>
 
 <ul>
@@ -488,7 +488,7 @@ IEEE Transactions on Multimedia (TMM, JCR-1区), 2014, 16(6): 1624-1635.
 
 <p>
 <font size="3">
-<b> Conference Proceedings</b></font>
+<b> Conference Papers</b></font>
 </p>
 
 <ul>
