--- a/index.htm
+++ b/index.htm
@@ -617,7 +617,8 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>
 </li>
 
-<li>DRL: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">1</a>,<a href="https://github.com/sweetice/Deep-reinforcement-learning-with-pytorch"  target="_blank">2</a>
+<li>DRL: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL_Pytorch 1</a>,
+  <a href="https://github.com/sweetice/Deep-reinforcement-learning-with-pytorch"  target="_blank">DRL_Pytorch 2</a>
 </ul>
 
   
