--- a/index.htm
+++ b/index.htm
@@ -614,7 +614,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <li><a href="https://github.com/changwookjun/nlp-paper#QA-MC-Dialogue"  target="_blank">Natural Language Processing Paper List</a>
 </li>
 
-<li><a href="https://github.com/uber-research/plato-research-dialogue-system"  target="_blank">Plato</a>
+<li><a href="https://github.com/uber-research/plato-research-dialogue-system" target="_blank">Plato Research Dialogue System</a>
 </li>
   
 <li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>
